# bitbuddy-brain

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
brain/bitbuddy/: activity.py  auth.py  cli.py  config.py  continuity.py  database.py  http_api.py  lifecycle.py  loop_learning.py  notifications.py  paths.py  personality.py  prompt_builder.py  providers.py  self_model.py  server.py  tools.py  workspace.py
src/bitbuddy/: __init__.py  auth.py  cli.py  config.py  desktop_control.py  http_api.py  (+17 more)
tests/: test_00_personality.py  test_01_continuity.py  test_activity_levels.py  test_artifact_tools.py  test_autonomy.py  test_autonomy_depth.py  test_calendar_config.py  test_calendar_scheduler.py  test_chat_message_edit_delete.py  test_chat_titles.py  test_cli_update.py  test_coding_evals.py  test_coding_runs.py  test_coding_workflows.py  test_commitments.py  test_continuity_fixes.py  test_continuity_service.py  test_doctor.py  test_dreaming_lifecycle.py  test_email.py  test_episodic_memory.py  test_http_static.py  test_intention_queue_cleanup.py  test_librarian_selection.py  test_loop_hardening.py  test_mcp_tools.py  test_memory_consolidation.py  test_memory_layers.py  test_memory_stewardship.py  test_mode_boundaries.py  test_notifications.py  test_permission_requests.py  test_personality_evolution.py  test_project_context.py  test_project_specs.py  test_project_validation.py  test_provider_capabilities.py  test_provider_context_usage.py  test_provider_images.py  test_provider_reasoning_effort.py  (+7 more)
web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
(+173 files in other folders)
