[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbuddy"
version = "0.4.0"
description = "Local-first AI companion scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "questionary>=2.0.1",
  "PyYAML>=6.0.2",
  "holidays>=0.50"
]

[project.scripts]
bitbuddy = "bitbuddy.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
